--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
             <p>Hello! I am Samuel Prieto. An UI Developer and UX Designer.</p>
-            <p>I am a very passionate person when it comes to learning new things about my work, I use all the skills that i have learned to bring the user an experience that can both satisfy and simplify its playability. Currently working on a Game company in Colombia Called Wise in media S.A.S as a UI developer and UX designer alongside other tasks using Unity3D.</p>
+            <p>I am a very passionate person when it comes to learning new things about my work, I use all the skills that i have learned to bring the user an experience that can both satisfy and simplify its playability. I worked in the Game companies Wise in media S.A.S and Life is the Game in Colombia as a UI developer and UX designer alongside other tasks using Unity3D.</p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
@@ -70,7 +70,7 @@
             <div class="h4 mt-0 title">Basic Information</div>
             <div class="row">
               <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-              <div class="col-sm-8">20</div>
+              <div class="col-sm-8">24</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
@@ -225,18 +225,34 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>September 2019 - Present</p>
+            <p>September 2019 - July 2021</p>
             <div class="h5">Wise in media S.A.S</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Engineer</div>
-            <p>Learned everything I know so far working here.</p>
+            <p>Learned about Unity and UI development.</p>
           </div>
         </div>
       </div>
     </div> 
+	   <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>December 2020 - December 2021</p>
+            <div class="h5">Life is the Game</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Engineer</div>
+            <p>Amplified my knowledge about UI Development and learned a bit of coding in C#.</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 <div class="section">
